--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,108 @@
+     /* Home page */
+    .index-page {
+        background-image: url("../images/index_background");
+    }
+
+    h2.facts {
+        text-align: center;
+    }
+
+    .index-container .quote {
+        position: absolute;
+        top: 20%;
+        left: 75%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        color: palevioletred;
+        font-size: 16px;
+        padding: 12px 24px;
+        border: none;
+        cursor: pointer;
+        border-radius: 5px;
+        text-align: center;
+    }
+
+    .index-container .btn {
+        position: absolute;
+        top: 75%;
+        left: 75%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        background-color: palevioletred;
+        color: white;
+        font-size: 16px;
+        padding: 12px 24px;
+        border: none;
+        cursor: pointer;
+        border-radius: 5px;
+        text-align: center;
+    }
+
+    .topnav {
+        overflow: hidden;
+        background-color: #333;
+        position: relative;
+    }
+
+    .topnav #myLinks {
+        display: none;
+    }
+
+    .topnav a {
+        color: white;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+        display: block;
+    }
+
+    .topnav a.icon {
+        background: white;
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .topnav a:hover {
+        background-color: #ddd;
+        color: black;
+    }
+
+    .active {
+        background-color: palevioletred;
+        color: white;
+    }
+    
+    @media screen and (max-width:959px) {
+        .index-container {
+            width: 100%;
+        }
+    }
+
+    @media screen and (max-width:640px) {
+        .index-container .quote {
+            width: 100%;
+        }
+
+        .pic {
+            width: 100%;
+        }
+
+        .index-container .btn {
+            width: 100%;
+        }
+
+        .facts {
+            text-align: center;
+        }
+    }
+
     /* about page */
+    .about-page {
+        background-image: url("../images/index_background");
+        height: 900px;
+    }
     .card-header {
         background-color: white;
         text-emphasis-color: white;
@@ -8,17 +112,11 @@
         background-color: palevioletred;
     }
 
-    body {
-        background-image: url("file:///Users/danmitchell/Downloads/background_with_breast_cancer_awareness_pink_ribbons3-.jpg");
-        height: 900px;
-
-    }
-
 
     /* contact page */
-    body {
+    .contact-page {
         font-family: Arial, Helvetica, sans-serif;
-        background-image: url("file:///Users/danmitchell/Downloads/Marking-Strides-Against-Breast-Cancer.png")
+        background-image: url("../images/contact_girl.png")
     }
 
     * {
@@ -26,10 +124,10 @@
     }
 
     /* Add padding to containers */
-    .container {
+    .contact-page-container {
         padding: 16px;
         background-color: white;
-        background-image: url("file:///Users/danmitchell/Downloads/239078_standard.jpeg")
+        background-image: url("../images/marking-strides-against-breast-cancer.png")
     }
 
     /* Full-width input fields */
@@ -82,128 +180,9 @@
         text-align: center;
     }
 
-    /* Home page */
-    @media screen and (max-width:959px) {
-        .container {
-            width: 100%;
-        }
-
-        .jumbotron {
-            width: 100%;
-        }
-
-    }
-
-    @media screen and (max-width:640px) {
-        .container .quote {
-            width: 100%;
-        }
-
-        .pic {
-            width: 100%;
-        }
-
-        .container .btn {
-            width: 100%;
-        }
-
-        .facts {
-            text-align: center;
-        }
-    }
-
-    .facts {
-        text-align: center;
-
-
-    }
-
-
-
-
-    body {
-
-        background-image: url("file:///Users/danmitchell/Downloads/parade%201.jpg.gallery%20(1).jpg");
-    }
-
-    .jumbotron {
-        background-color: white;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        -webkit-text-fill-color: pink;
-    }
-
-    .container .quote {
-        position: absolute;
-        top: 20%;
-        left: 75%;
-        transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        color: palevioletred;
-        font-size: 16px;
-        padding: 12px 24px;
-        border: none;
-        cursor: pointer;
-        border-radius: 5px;
-        text-align: center;
-
-    }
-
-
-    .container .btn {
-        position: absolute;
-        top: 75%;
-        left: 75%;
-        transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        background-color: palevioletred;
-        color: white;
-        font-size: 16px;
-        padding: 12px 24px;
-        border: none;
-        cursor: pointer;
-        border-radius: 5px;
-        text-align: center;
-    }
-
-    .topnav {
-        overflow: hidden;
-        background-color: #333;
-        position: relative;
-    }
-
-    .topnav #myLinks {
-        display: none;
-    }
-
-    .topnav a {
-        color: white;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-        display: block;
-    }
-
-    .topnav a.icon {
-        background: white;
-        display: block;
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    .topnav a:hover {
-        background-color: #ddd;
-        color: black;
-    }
-
-    .active {
-        background-color: palevioletred;
-        color: white;
-    }
-
     /* Map page */
-        body {
-            background-image: url("file:///Users/danmitchell/Downloads/parade%201.jpg.gallery%20(1).jpg");
+        .map {
+            background-image: url("../images/parade.png");
             height: 900px;
             text-align: center;
         }
