--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
+    html {
+        font-size: 1rem;
+    }
+
+    .nav-link {
+        color: rgb(212, 55, 128);
+        font-size: 2em;
+        font-family: 'Just Another Hand', cursive;
+    }
+
      /* Home page */
     .index-page {
         background-image: url("../images/index_background");
