--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,17 +87,27 @@
         }
     } */
 
-    /* about page */
+    /* About page */
 
     .container_about {
-        width: 80%;
+        width: 70%;
         margin: auto;
         font-size: 1.2em;
+        padding: 20px;
     }
 
     .card-body {
         background-color: palevioletred;
         text-align: center;
+        border-radius: 30px;
+        margin-top: 20px;
+    }
+    
+    .about {
+        font-size: 1.8em;
+        margin: 10px;
+        color: white;
+        font-family: 'Amatic SC', cursive;
     }
 
     /* contact page */
@@ -175,9 +185,9 @@
         color: dodgerblue;
     }
 
-    /* Map page */
+    /* Getwigs page */
 
-    .container_map {
+    .container_getwigs {
         /* background-image: url("../images/parade.png"); */
         height: 900px;
         text-align: center;
