--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,62 +31,6 @@
         color: rgb(36, 25, 25);
     }
 
-    /* .topnav {
-        overflow: hidden;
-        background-color: #333;
-        position: relative;
-    }
-
-    .topnav #myLinks {
-        display: none;
-    }
-
-    .topnav a {
-        color: white;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-        display: block;
-    }
-
-    .topnav a.icon {
-        background: white;
-        display: block;
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    .topnav a:hover {
-        background-color: #ddd;
-        color: black;
-    } */
-
-    /*     
-    @media screen and (max-width:959px) {
-        .index-container {
-            width: 100%;
-        }
-    }
-
-    @media screen and (max-width:640px) {
-        .index-container .quote {
-            width: 100%;
-        }
-
-        .pic {
-            width: 100%;
-        }
-
-        .index-container .btn {
-            width: 100%;
-        }
-
-        .facts {
-            text-align: center;
-        }
-    } */
-
     /* About page */
 
     .container_about {
@@ -109,8 +53,8 @@
         color: white;
         font-family: 'Amatic SC', cursive;
     }
-
-    /* contact page */
+    
+    /* Register page */
 
     .container_contact {
         box-sizing: border-box;
@@ -194,6 +138,89 @@
         font-size: 1.6em;
         margin: auto;
         padding: 20px;
+    }
+
+    /* Always set the map height explicitly to define the size of the div
+   * element that contains the map. */
+
+   #map {
+    height: 500px;
+    width: 1000px;
+    margin: auto;
+   }
+
+   /* Optional: Makes the sample page fill the window. */
+
+    #description {
+    font-family: 'Amatic SC', cursive;;
+    font-size: 15px;
+    font-weight: 300;
+    }
+
+    #infowindow-content .title {
+    font-weight: bold;
+    }
+
+    #infowindow-content {
+    display: none;
+    }
+
+    #map #infowindow-content {
+    display: inline;
+    }
+
+    .pac-card {
+    margin: 10px 10px 0 0;
+    border-radius: 2px 0 0 2px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    outline: none;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    background-color: #fff;
+    font-family: 'Amatic SC', cursive;;
+    }
+
+    #pac-container {
+    padding-bottom: 12px;
+    margin-right: 12px;
+    }
+
+    .pac-controls {
+    display: inline-block;
+    padding: 5px 11px;
+    }
+
+    .pac-controls label {
+    font-family: 'Amatic SC', cursive;;
+    font-size: 20px;
+    font-weight: 300;
+    }
+
+    #pac-input {
+    background-color: #fff;
+    font-family: 'Amatic SC', cursive;;
+    font-size: 30px;
+    font-weight: 300;
+    margin: 10px 0 0 12px;
+    padding: 0 11px 0 13px;
+    text-overflow: ellipsis;
+    width: 400px;
+    }
+ 
+    #pac-input:focus {
+    border-color: #4d90fe;
+    }
+
+    #title {
+    color: #fff;
+    background-color: #4d90fe;
+    font-size: 25px;
+    font-weight: 500;
+    padding: 6px 12px;
+    }
+
+    #target {
+    width: 345px;
     }
 
     /* Donation page */
