--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
     html {
         font-size: 1rem;
-        font-family: 'Just Another Hand', cursive;
+        font-family: 'Amatic SC', cursive;
     }
 
     .nav-link {
@@ -152,7 +152,7 @@
    /* Optional: Makes the sample page fill the window. */
 
     #description {
-    font-family: 'Amatic SC', cursive;;
+    font-family: 'Amatic SC', cursive;
     font-size: 15px;
     font-weight: 300;
     }
@@ -177,7 +177,7 @@
     outline: none;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
     background-color: #fff;
-    font-family: 'Amatic SC', cursive;;
+    font-family: 'Amatic SC', cursive;
     }
 
     #pac-container {
@@ -191,7 +191,7 @@
     }
 
     .pac-controls label {
-    font-family: 'Amatic SC', cursive;;
+    font-family: 'Amatic SC', cursive;
     font-size: 20px;
     font-weight: 300;
     }
