--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,14 +46,14 @@
         border-radius: 30px;
         margin-top: 20px;
     }
-    
+
     .about {
         font-size: 1.8em;
         margin: 10px;
         color: white;
         font-family: 'Amatic SC', cursive;
     }
-    
+
     /* Register page */
 
     .container_contact {
@@ -143,84 +143,88 @@
     /* Always set the map height explicitly to define the size of the div
    * element that contains the map. */
 
-   #map {
-    height: 500px;
-    width: 1000px;
-    margin: auto;
-   }
+    #map {
+        height: 500px;
+        width: 1000px;
+        margin: auto;
+    }
 
-   /* Optional: Makes the sample page fill the window. */
+    /* Optional: Makes the sample page fill the window. */
 
     #description {
-    font-family: 'Amatic SC', cursive;;
-    font-size: 15px;
-    font-weight: 300;
+        font-family: 'Amatic SC', cursive;
+        ;
+        font-size: 15px;
+        font-weight: 300;
     }
 
     #infowindow-content .title {
-    font-weight: bold;
+        font-weight: bold;
     }
 
     #infowindow-content {
-    display: none;
+        display: none;
     }
 
     #map #infowindow-content {
-    display: inline;
+        display: inline;
     }
 
     .pac-card {
-    margin: 10px 10px 0 0;
-    border-radius: 2px 0 0 2px;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    outline: none;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-    background-color: #fff;
-    font-family: 'Amatic SC', cursive;;
+        margin: 10px 10px 0 0;
+        border-radius: 2px 0 0 2px;
+        box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        outline: none;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+        background-color: #fff;
+        font-family: 'Amatic SC', cursive;
+        ;
     }
 
     #pac-container {
-    padding-bottom: 12px;
-    margin-right: 12px;
+        padding-bottom: 12px;
+        margin-right: 12px;
     }
 
     .pac-controls {
-    display: inline-block;
-    padding: 5px 11px;
+        display: inline-block;
+        padding: 5px 11px;
     }
 
     .pac-controls label {
-    font-family: 'Amatic SC', cursive;;
-    font-size: 20px;
-    font-weight: 300;
+        font-family: 'Amatic SC', cursive;
+        ;
+        font-size: 20px;
+        font-weight: 300;
     }
 
     #pac-input {
-    background-color: #fff;
-    font-family: 'Amatic SC', cursive;;
-    font-size: 30px;
-    font-weight: 300;
-    margin: 10px 0 0 12px;
-    padding: 0 11px 0 13px;
-    text-overflow: ellipsis;
-    width: 400px;
+        background-color: #fff;
+        font-family: 'Amatic SC', cursive;
+        ;
+        font-size: 30px;
+        font-weight: 300;
+        margin: 10px 0 0 12px;
+        padding: 0 11px 0 13px;
+        text-overflow: ellipsis;
+        width: 400px;
     }
- 
+
     #pac-input:focus {
-    border-color: #4d90fe;
+        border-color: #4d90fe;
     }
 
     #title {
-    color: #fff;
-    background-color: #4d90fe;
-    font-size: 25px;
-    font-weight: 500;
-    padding: 6px 12px;
+        color: #fff;
+        background-color: #4d90fe;
+        font-size: 25px;
+        font-weight: 500;
+        padding: 6px 12px;
     }
 
     #target {
-    width: 345px;
+        width: 345px;
     }
 
     /* Donation page */
@@ -260,4 +264,9 @@
 
     .form-control {
         font-size: 1.2em;
+    }
+
+    .btn.btn-secondary {
+        font-size: 20px !important;
+        margin: auto !important;
     }
